force-app/main/default/objects/MaskSObjectField__c/MaskSObjectField__c.object-meta.xml
<CustomObject>
    <description>Records which fields to mask and how to mask it</description>
    <label>Mask SObject Field</label>
    <nameField>
        <label>Mask SObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mask SObject Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>