force-app/main/default/objects/MaskSObjectField__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>Indicate the action to perform on this field to mask data</description>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Erase</fullName>
            </value>
            <value>
                <fullName>Replace</fullName>
            </value>
            <value>
                <fullName>Obfuscate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>