force-app/main/default/objects/MaskSObjectField__c/fields/ActionType__c.field-meta.xml
<CustomField>
    <fullName>ActionType__c</fullName>
    <description>Indicates the type of action configured</description>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Action__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardcoded</fullName>
            </value>
            <value>
                <fullName>Dictionary.firstname</fullName>
                <label>Dictionary Firstname</label>
            </value>
            <value>
                <fullName>Dictionary.fullname</fullName>
                <label>Dictionary Fullname</label>
            </value>
            <value>
                <fullName>Dictionary.lastname</fullName>
                <label>Dictionary Lastname</label>
            </value>
            <value>
                <fullName>Regex</fullName>
                <isActive>false</isActive>
                <label>Regex</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>