force-app/main/default/objects/MaskSObjectField__c/fields/APIName__c.field-meta.xml
<CustomField>
    <fullName>APIName__c</fullName>
    <description>API of the field to mask</description>
    <externalId>true</externalId>
    <label>API Name</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>