force-app/main/default/objects/MaskSObjectField__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Add more context about the business need of this field masking.</description>
    <inlineHelpText>Add more context about the business need of this field masking.</inlineHelpText>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>