force-app/main/default/objects/MaskSObjectField__c/fields/MaskSObject__c.field-meta.xml
<CustomField>
    <fullName>MaskSObject__c</fullName>
    <description>Link of the SObject&apos;s field</description>
    <label>Mask SObject</label>
    <referenceTo>MaskSObject__c</referenceTo>
    <relationshipLabel>Mask SObject Fields</relationshipLabel>
    <relationshipName>MaskSObjectFields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>