force-app/main/default/objects/MaskSObjectField__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <description>This field determines if this MaskSObjectField will be treated in one-shot mode, scheduled mode or both.</description>
    <inlineHelpText>This field determines if this MaskSObjectField will be treated in one-shot mode, scheduled mode or both.</inlineHelpText>
    <label>Mode</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-shot</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>