force-app/main/default/objects/MaskSObjectField__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Link to the record</description>
    <formula>HYPERLINK(&apos;/&apos;&amp;Id, APIName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name</label>
    <type>Text</type>
</CustomField>