force-app/main/default/objects/MaskSObjectField__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Store the required value based on action type (ie regex or hardcoded value)</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>